# choir

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: CI.yaml  post.yaml  pre.yaml
apps/: Cargo.toml  dummy.rs  qsort.rs
benches/: ballpark.rs
examples/: Cargo.toml  qsort.rs
src/: arc.rs  compat.rs  lib.rs  queue.rs  util.rs
tests/: basic.rs  loom.rs
