[package]
name = "choir"
version = "0.5.0"
edition = "2021"
description = "Task Orchestration Framework"
license = "MIT"
documentation = "https://docs.rs/choir"
repository = "https://github.com/kvark/choir"
keywords = ["job-system", "tasks"]
categories = ["concurrency", "game-development"]

[workspace]
members = [
	"apps",
]

[[bench]]
name = "ballpark"
harness = false

[dependencies]
crossbeam-deque = { version = "0.8", optional = true }
log = "0.4"
profiling = "1"

[target.'cfg(shuttle)'.dependencies]
shuttle = { git = "https://github.com/awslabs/shuttle" }

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9"
num_cpus = "1"
