[package]
name = "choir"
version = "0.7.0"
edition = "2021"
rust-version = "1.81"
description = "Task Orchestration Framework"
license = "MIT"
documentation = "https://docs.rs/choir"
repository = "https://github.com/kvark/choir"
keywords = ["job-system", "tasks"]
categories = ["concurrency", "game-development"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[workspace]
members = [
	"apps",
]

[[bench]]
name = "ballpark"
harness = false

[dependencies]
crossbeam-deque = "0.8"
log = "0.4"
profiling = "1"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[dev-dependencies]
criterion = "0.5"
env_logger = "0.9"
loom = "0.7"
num_cpus = "1"
